--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Press Start 2P';
 }
 
+h3{
+    color: white;
+   font-weight: 900;
+   font-size: 35px;
+}
 .container{
    display: flex;
+   gap:1rem;
+   flex-direction: column;
    height: 100vh;
    width: 100vw;
    background-color: rgb(10, 10, 10);
@@ -15,6 +26,7 @@
 
 #canvas{
     border: 1px solid black;
+    /* font: 'Press Start 2P'; */
 }
 /* 
 #canvas:focus{
