--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,8 @@
 
         </canvas>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="../js/script.js"></script>
+
 </body>
 </html>
