--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ h3{
    background-color: rgb(10, 10, 10);
    justify-content: center;
    align-items: center;
+   flex-wrap: wrap;
 }
 
 #canvas{
@@ -31,4 +32,18 @@ h3{
 
  .swal2-title{
     color: #fa0101 !important;
+}
+
+@media (max-width:767px) {
+    
+h3{
+    color: white;
+   font-weight: 800;
+   font-size: 20px;
+}
+    #canvas{
+        width: 400px;
+        height: 450px;
+        /* height: 200px; */
+    }
 }
